# munity

./: .env  .env.sample  .gitignore  LICENSE  README.md  docker-compose.yml  todo.md
api/: Dockerfile  Dockerfile.local  LICENSE  README.md  celerybeat-schedule  manage.py  package-lock.json  package.json  requirements.dev  requirements.in  requirements.txt  setup.cfg  todo.txt
api/api/: tasks.py
api/apps/: apps.py
api/apps/accounts/: admin.py  operations.py  reverse_lookup.py  serializers.py  urls.py  views.py
api/apps/acl/: admin.py  apps.py  models.py  operations.py  serializers.py  urls.py  views.py
api/apps/admin_panel/: admin.py
api/apps/authentication/: api_keys.py  backends.py  exceptions.py  middlewares.py  tests.py  tokens.py  urls.py
api/apps/base/: helpers.py  logs.py  middlewares.py  operations.py  pagination.py  routers.py  serializers.py  viewsets.py
api/apps/dashboards/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
api/apps/data_connector/: data_connector.py  exceptions.py  urls.py  views.py
api/apps/devices/: admin.py  models.py  operations.py  reverse_lookup.py  serializers.py  urls.py  views.py
api/apps/graphs/: admin.py  models.py  serializers.py  urls.py  views.py
api/apps/groups/: admin.py  apps.py  models.py  operations.py  serializers.py  urls.py  views.py
api/apps/invites/: admin.py  apps.py  models.py  operations.py  serializers.py  urls.py  views.py
api/apps/logs/: admin.py  apps.py  middleware.py  models.py
api/apps/mails/: emails.py
api/munity/: apps.py  asgi.py  celery.py  models.py  rest.py  settings.py  settings_acl.py  urls.py  utils.py  views.py
api/munityapps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
api/optimbtp_portal/: asgi.py  settings.py  urls.py  wsgi.py
api/projects/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
api/scripts/: deploy.sh
api/src/: App.module.ts  main.ts  manage.py
api/test/: app.e2e-spec.ts
(+421 files in other folders)
