[metadata]
name = munityapps
version = 0.1.58
author = Cyril ALFARO
author_email = cyril@munityapps.com
description = API for munity project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://munityapps.com
project_urls =
    Bug Tracker = https://github.com/munityapps/munity
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
packages = munity
    munity/authenticate/
    munity/authorization/
    munity/authorization/migrations
    munity/authorization/management/commands
    munity/generic_groups/
    munity/generic_groups/migrations
    munity/records/
    munity/records/migrations
    munity/settings/
    munity/settings/migrations
    munity/users/
    munity/users/migrations
    munity/workspaces/
    munity/workspaces/migrations
    munity/files/
    munity/files/migrations

python_requires = >=3.9
